fix(Sass): :bug: Fix Card proportion on tablet

--- a/src/sass/layout/_grid-auto-fit.scss
+++ b/src/sass/layout/_grid-auto-fit.scss
@@ -1,7 +1,7 @@
 @use "../abstracts/" as *;
 
 .grid-auto-fit {
-  --min-item-width: #{rem(220)};
+  --min-item-width: #{rem(250)};
 
   display: grid;
 
